basic PostAJob, ensure css in style folder applies

--- a/style/HeroSection.css
+++ b/style/HeroSection.css
@@ -1,5 +1,5 @@
 .hero-container {
-  background-color: gray;
-  color: aliceblue;
-  padding: 2rem;
+  background-color: gray !important;
+  color: aliceblue !important;
+  padding: 2rem !important;
 }
