Index: shrink hero section padding

--- a/style/HeroSection.css
+++ b/style/HeroSection.css
@@ -1,5 +1,5 @@
 .hero-container {
   background-color: gray !important;
   color: aliceblue !important;
-  padding: 2rem !important;
+  padding-top: 1rem !important;
 }
