--- a/style/HeroSection.css
+++ b/style/HeroSection.css
@@ -1,5 +1,9 @@
 .hero-container {
-  background-color: gray !important;
+  /* background-color: gray !important; */
   color: aliceblue !important;
   padding-top: 1rem !important;
+  padding-bottom: 3rem !important;
+  background-image: linear-gradient(180deg, #449175, #ff9a60) !important;
+  z-index: -1;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
 }
