--- a/style/PostAJob.css
+++ b/style/PostAJob.css
@@ -1,5 +1,10 @@
 .gray-form {
-  background-color: lightgray !important;
+  /* background-color: lightgray !important; */
+  background-image: linear-gradient(
+    180deg,
+    rgba(68, 145, 117, 0.3),
+    rgba(255, 154, 96, 0.3)
+  ) !important;
   border-radius: 10px !important;
   font-size: larger !important;
 }
@@ -14,10 +19,10 @@
   font-size: 14px !important;
 }
 
-.section-title{
+.section-title {
   font-size: x-large !important;
 }
 
-.textarea-style{
+.textarea-style {
   font-size: medium !important;
 }
