About: force footer to bottom

--- a/style/About.css
+++ b/style/About.css
@@ -8,3 +8,13 @@
     font-size: large !important;
   }
 }
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+}
