--- a/components/footer.html
+++ b/components/footer.html
@@ -1,4 +1,52 @@
+<head>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+
+    /* Create three equal columns that floats next to each other */
+    .column-footer {
+      float: left;
+      width: 33.33%;
+      padding: 10px;
+      height: 5rem;
+      /* Should be removed. Only for demonstration */
+    }
+
+    /* Clear floats after the columns */
+    .row-footer:after {
+      content: "";
+      display: table;
+      clear: both;
+      padding-left: 6rem;
+    }
+  </style>
+</head>
+
 <hr>
-<div class="container-fluid mb-3">
-  Footer
+
+<div class="footer-wrap container-fluid mb-3" style="text-align: center; padding: 3px; padding-bottom: 5rem;">
+
+  <div class="row-footer">
+    <div class="column-footer">
+      <h6 style="margin-bottom: 1rem;">For Employers</h6>
+      <p>FAQs</p>
+      <p>Post a Job</p>
+      <p>Contact Us</p>
+    </div>
+    <div class="column-footer">
+      <h6 style="margin-bottom: 1rem;">For Job Seekers</h6>
+      <p>FAQs</p>
+      <p>Search Jobs</p>
+      <p>Contact Us</p>
+    </div>
+    <div class="column-footer">
+      <h6 style="margin-bottom: 1rem;">NewGradNomad</h6>
+      <p>About Us</p>
+      <p>Customer Support</p>
+      <p>Legal</p>
+    </div>
+  </div>
 </div>
+
+<hr>
