--- a/components/navbar.html
+++ b/components/navbar.html
@@ -43,3 +43,32 @@
     document.getElementById("about").setAttribute("href", "../pages/about");
   }
 </script>
+
+<div class="modal fade" id="newsletterModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title h4">Newsletter Signup</div>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Signing up for the newsletter will enable you to get notified via email when a new job listing is posted.
+        </p>
+        <form novalidate="">
+          <div class="mb-3"><label for="newsletterEmail" class="form-label">Email address</label>
+            <div class="input-group">
+              <input id="newsletterEmail" required="" placeholder="name@example.com"
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" type="email" class="form-control">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-primary">Sign up</button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</body>
