add days since post to card

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,21 +1,23 @@
 <hr>
 
-<div class="container-fluid text-center">
+<div class="container-sm text-center mb-3">
   <div class="row">
     <div class="col">
-      <h6>For Employers</h6>
+      <h6 class="my-3">Employers</h6>
       <p>FAQs</p>
       <p>Post a Job</p>
       <p>Contact Us</p>
     </div>
+    <div class="vr px-0"></div>
     <div class="col">
-      <h6>For Job Seekers</h6>
+      <h6 class="my-3">Job Seekers</h6>
       <p>FAQs</p>
       <p>Search Jobs</p>
       <p>Contact Us</p>
     </div>
+    <div class="vr px-0"></div>
     <div class="col">
-      <h6>NewGradNomad</h6>
+      <h6 class="my-3">NewGradNomad</h6>
       <p>About Us</p>
       <p>Customer Support</p>
       <p>Legal</p>
