--- a/components/footer.html
+++ b/components/footer.html
@@ -1,26 +1,29 @@
 <hr>
-
-<div class="container-sm text-center mb-3">
-  <div class="row">
-    <div class="col">
-      <h6 class="my-3">Employers</h6>
-      <p>FAQs</p>
-      <p>Post a Job</p>
-      <p>Contact Us</p>
-    </div>
-    <div class="vr px-0"></div>
-    <div class="col">
-      <h6 class="my-3">Job Seekers</h6>
-      <p>FAQs</p>
-      <p>Search Jobs</p>
-      <p>Contact Us</p>
-    </div>
-    <div class="vr px-0"></div>
-    <div class="col">
-      <h6 class="my-3">NewGradNomad</h6>
-      <p>About Us</p>
-      <p>Customer Support</p>
-      <p>Legal</p>
+<div class="container">
+  <div class="container text-center">
+    <div class="row px-0">
+      <div class="col px-0">
+        <h6 class="mx-2 my-3">Employers</h6>
+        <p><small>FAQs</small></p>
+        <p><small>Post a Job</small></p>
+        <p><small>Contact Us</small></p>
+      </div>
+      <div class="vr px-0"></div>
+      <div class="col px-0">
+        <h6 class="mx-2 my-3">Job Seekers</h6>
+        <p><small class="mb-2">FAQs</small></p>
+        <p><small>Search Jobs</small></p>
+        <p><small>Contact Us</small></p>
+      </div>
+      <div class="vr px-0"></div>
+      <div class="col px-0">
+        <h6 class="mx-2 my-3">NewGradNomad</h6>
+        <p><small>About Us</small></p>
+        <p><small>Customer Support</small></p>
+        <p><small>Legal</small></p>
+        <br>
+      </div>
     </div>
   </div>
 </div>
+<hr>
