added anchor tags for footer links

--- a/components/footer.html
+++ b/components/footer.html
@@ -4,26 +4,43 @@
     <div class="row px-0">
       <div class="col px-0">
         <h6 class="mx-2 my-3">Employers</h6>
-        <p><small>FAQs</small></p>
-        <p><small>Post a Job</small></p>
-        <p><small>Contact Us</small></p>
+        <a href="" style="color:black">
+          <p><small>FAQs</small></p>
+        </a>
+        <a href="" style="color:black">
+          <p><small>Post a Job</small></p>
+        </a>
+        <a href="" style="color:black">
+          <p><small>Contact Us</small></p>
+        </a>
       </div>
       <div class="vr px-0"></div>
       <div class="col px-0">
         <h6 class="mx-2 my-3">Job Seekers</h6>
-        <p><small class="mb-2">FAQs</small></p>
-        <p><small>Search Jobs</small></p>
-        <p><small>Contact Us</small></p>
+        <a href="" style="color:black">
+          <p><small>Job Seekers</small></p>
+        </a>
+        <a href="" style="color:black">
+          <p><small>FAQs</small></p>
+        </a>
+        <a href="" style="color:black">
+          <p><small>Contact Us</small></p>
+        </a>
       </div>
       <div class="vr px-0"></div>
       <div class="col px-0">
         <h6 class="mx-2 my-3">NewGradNomad</h6>
-        <p><small>About Us</small></p>
-        <p><small>Customer Support</small></p>
-        <p><small>Legal</small></p>
+        <a href="" style="color:black">
+          <p><small>About Us</small></p>
+        </a>
+        <a href="" style="color:black">
+          <p><small>Customer Support</small></p>
+        </a>
+        <a href="" style="color:black">
+          <p><small>Legal</small></p>
+        </a>
         <br>
       </div>
     </div>
   </div>
 </div>
-<hr>
