need help with paths on line 7

--- a/components/footer.html
+++ b/components/footer.html
@@ -4,7 +4,7 @@
     <div class="row px-0">
       <div class="col px-0">
         <h6 class="mx-2 my-3">Employers</h6>
-        <a href="" style="color:black">
+        <a href="../pages/FAQEmployers.php" style="color:black">
           <p><small>FAQs</small></p>
         </a>
         <a href="" style="color:black">
