--- a/components/footer.html
+++ b/components/footer.html
@@ -4,39 +4,39 @@
     <div class="row px-0">
       <div class="col px-0">
         <h6 class="mx-2 my-3">Employers</h6>
-        <a href="./pages/FAQEmployers" style="color:black">
+        <a id="FAQEmployers" href="./pages/FAQEmployers" class="links">
           <p><small>FAQs</small></p>
         </a>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>Post a Job</small></p>
         </a>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>Contact Us</small></p>
         </a>
       </div>
       <div class="vr px-0"></div>
       <div class="col px-0">
         <h6 class="mx-2 my-3">Job Seekers</h6>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>Job Seekers</small></p>
         </a>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>FAQs</small></p>
         </a>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>Contact Us</small></p>
         </a>
       </div>
       <div class="vr px-0"></div>
       <div class="col px-0">
         <h6 class="mx-2 my-3">NewGradNomad</h6>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>About Us</small></p>
         </a>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>Customer Support</small></p>
         </a>
-        <a href="" style="color:black">
+        <a href="" class="links">
           <p><small>Legal</small></p>
         </a>
         <br>
@@ -44,3 +44,10 @@
     </div>
   </div>
 </div>
+<script>
+  var loc = window.location.pathname;
+  var dir = loc.substring(0, loc.lastIndexOf("/"));
+  if (dir.includes("pages")) {
+    document.getElementById("FAQEmployers").setAttribute("href", "./FAQEmployers");
+  }
+</script>
