process salary range in php script, add to job cards

--- a/style/Home.css
+++ b/style/Home.css
@@ -10,3 +10,13 @@
 .orange-Card {
   background-color: #ee7833 !important;
 }
+
+.salary-button {
+  background-color: #21644ddc !important;
+  border-color: #21644ddc !important;
+}
+
+.orange-button {
+  background-color: #ed6f26 !important;
+  border-color: #ed6f26 !important;
+}
