--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,3 +1,7 @@
+<div class="alert alert-warning mb-0 text-center fs-1" role="alert">
+  <b>Site is currently under development, all job listings are made up and for testing purposes only!</b>
+</div>
+
 <nav class="green-nav navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid"><a id="homeName" href="./" class="navbar-brand">newgradnomad.com</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
