--- a/components/footer.html
+++ b/components/footer.html
@@ -4,10 +4,10 @@
     <div class="row px-0">
       <div class="col px-0">
         <h6 class="mx-2 my-3">Employers</h6>
-        <a id="FAQEmployers" href="./pages/FAQEmployers" class="links">
+        <a id="FAQEmployersFooterLink" href="./pages/FAQEmployers" class="links">
           <p><small>FAQs</small></p>
         </a>
-        <a href="" class="links">
+        <a id="PostAJobFooterLink" href="./pages/PostAJob" class="links">
           <p><small>Post a Job</small></p>
         </a>
         <a href="" class="links">
@@ -30,7 +30,7 @@
       <div class="vr px-0"></div>
       <div class="col px-0">
         <h6 class="mx-2 my-3">NewGradNomad</h6>
-        <a href="" class="links">
+        <a id="aboutFooterLink" href="./pages/about" class="links">
           <p><small>About Us</small></p>
         </a>
         <a href="" class="links">
@@ -45,9 +45,14 @@
   </div>
 </div>
 <script>
+  var linkNames = ["FAQEmployersFooterLink", "PostAJobFooterLink", "aboutFooterLink"];
   var loc = window.location.pathname;
   var dir = loc.substring(0, loc.lastIndexOf("/"));
   if (dir.includes("pages")) {
-    document.getElementById("FAQEmployers").setAttribute("href", "./FAQEmployers");
+    for (var currentLink of linkNames) {
+      var currentPath = document.getElementById(currentLink).getAttribute("href");
+      var newPath = "." + currentPath;
+      document.getElementById(currentLink).setAttribute("href", newPath);
+    }
   }
 </script>
