fix uneven navbar spacing at ends

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -3,12 +3,12 @@
 </div>
 
 <nav class="green-nav navbar navbar-expand-lg navbar-dark">
-  <div class="container-fluid"><a id="homeName" href="./" class="navbar-brand">newgradnomad.com</a>
+  <div class="container-fluid px-3"><a id="homeName" href="./" class="navbar-brand">newgradnomad.com</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
       aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="container-fluid">
+    <div class="container-fluid pe-0">
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <div class="ms-auto navbar-nav">
           <a class="nav-links nav-link" id="PostAJob" href="./pages/PostAJob">
@@ -24,8 +24,8 @@
               <a data-bs-toggle="modal" data-bs-target="#newsletterModal" class="nav-links dropdown-item"><button type="button" class="button-hide btn btn-primary"><strong>Newsletter</strong></button></a>
             </div>
           </div> -->
-          <a class="nav-links nav-link" id="about" href="./pages/about">
-            <button type="button" class="button-hide btn btn-primary"><strong>About</strong></button>
+          <a class="nav-links nav-link pe-0" id="about" href="./pages/about">
+            <button type="button" class="button-hide btn btn-primary pe-0"><strong>About</strong></button>
           </a>
         </div>
       </div>
