--- a/components/errorLinks.html
+++ b/components/errorLinks.html
@@ -1,7 +1,4 @@
 <h6>Here are some helpful links:</h6>
-<a role="button" href="./" class="mx-2 btn btn-primary"
-  style="background-color: rgb(237, 111, 38); border: none;">Home</a>
-<a role="button" href="./pages/PostAJob" class="mx-2 btn btn-primary"
-  style="background-color: rgb(237, 111, 38); border: none;">Post a Job</a>
-<a role="button" href="./pages/about" class="mx-2 btn btn-primary"
-  style="background-color: rgb(237, 111, 38); border: none;">About</a>
+<a role="button" href="./" class="mx-2 btn btn-primary" style="background-color: rgb(237, 111, 38); border: none">Home</a>
+<a role="button" href="./pages/PostAJob" class="mx-2 btn btn-primary" style="background-color: rgb(237, 111, 38); border: none">Post a Job</a>
+<a role="button" href="./pages/about" class="mx-2 btn btn-primary" style="background-color: rgb(237, 111, 38); border: none">About</a>
