--- a/style/PostAJob.css
+++ b/style/PostAJob.css
@@ -1,10 +1,6 @@
 .gray-form {
   /* background-color: lightgray !important; */
-  background-image: linear-gradient(
-    180deg,
-    rgba(68, 145, 117, 0.3),
-    rgba(255, 154, 96, 0.3)
-  ) !important;
+  background-image: linear-gradient(180deg, rgba(68, 145, 117, 0.3), rgba(255, 154, 96, 0.3)) !important;
   border-radius: 10px !important;
   font-size: larger !important;
 }
